# docker-control

./: .gitignore  .shellcheckrc  AGENTS.md  CLAUDE.md  Cargo.toml  Containerfile  MIGRATION.md  Makefile  README.md  build.sh  dist-workspace.toml  entrypoint.sh  install.sh
.config/: nextest.toml
.github/workflows/: build-binaries.yml  ci.yml  docker-build.yml  release.yml  test.yml  tests.yml
examples/: deploy-config-complex.json  deploy-config-simple.json  deployment-hooks.rhai  deployment-hooks.sh  module-workflow-demo.sh
ingress/: compose.yml
lib/: deploy-functions.sh  deployment-config-schema.json  git-functions.sh  json-config-functions.sh  plugin-functions.sh  util-functions.sh
plugin/: docker-control  docker-control-local-wrapper-script  docker-control-wrapper-script
scripts/: validate-json-config.sh
src/: lib.rs  main.rs
src/assets/: mod.rs
src/commands/: add_deploy_config.rs  create_script.rs  custom.rs  deploy.rs  init.rs  install_plugin.rs  merge.rs  migrate.rs  mod.rs  release.rs  show_running.rs  status.rs  update.rs
src/config/: mod.rs
src/docker/: mod.rs
src/git/: mod.rs
src/ssh/: mod.rs
src/ui/: mod.rs
src/utils/: dependencies.rs  forwarding.rs  mod.rs  platform.rs
template/: .gitignore-dist  compose.yml
template/config/: composer.config.json
template/config/apache-sites/: default.conf
test/: README.md  TESTING_SUMMARY.md  run-tests.sh  test-deploy-functions.bats  test-framework.sh  test-git-functions.bats  test-helpers.bash  test-integration.bats  test-json-config-functions.bats  test-module-functions.bats  test-plugin-functions.bats  test-simple.bats  test-util-functions.bats  test-working-example.bats
tests/: deploy_integration_tests.rs  git_tests.rs  merge_integration_tests.rs  platform_tests.rs  release_integration_tests.rs  release_tests.rs  test-config-locations.sh  test-json-config.sh
tests/common/: mod.rs
