[package]
name = "docker-control"
version = "2.0.2"
edition = "2024"
description = "a CLI tool to control ik docker stack"
homepage = "https://github.com/INTERLIGENT-kommunzieren-GmbH/docker-control"
repository = "git@github.com:INTERLIGENT-kommunzieren-GmbH/docker-control.git"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
git2 = "0.20.4"
inquire = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
chrono = "0.4.44"
include_dir = "0.7.4"
directories = "6.0.0"
libc = "0.2"
get_if_addrs = "0.5.3"
fs_extra = "1.3"
walkdir = "2.5"
bollard = "0.18.1"
daemonize = "0.5"

[dev-dependencies]
tempfile = "3.10.1"

[profile.dist]
inherits = "release"
lto = "thin"
